--- a/client/src/Components/Input/Input.scss
+++ b/client/src/Components/Input/Input.scss
@@ -1,3 +1,90 @@
+@import '../../Styles/variables';
+
 .form__group {
+  position: relative;
+
+  &.--text,
+  &.--password,
+  &.--email,
+  &.--file,
+  &_radio {
+    margin-bottom: 2rem;
+  }
+
+  &.--radio {
+    margin-bottom: 1rem;
+    input {
+      display: none;
+    }
+    label {
+      display: flex;
+      align-items: center;
+      position: relative;
+      cursor: pointer;
   
+      &:before {
+        content: '';
+        width: 20px;
+        height: 20px;
+        border: 2px solid $color_gray;
+        border-radius: 100%;
+        margin-right: 8px;
+        display: block;
+      }
+    }
+    input:checked + label:after {
+      content: '';
+      width: 10px;
+      height: 10px;
+      background-color: $color_primary;
+      border-radius: 100%;
+      display: block;
+      position: absolute;
+      top: 4px;
+      left: 5px;
+    }
+  }
+
+  &.--text,
+  &.--password,
+  &.--email {
+    input {
+      height: 50px;
+      border: 2px solid $color_gray;
+      background: transparent;
+      padding: 15px 20px;
+      color: $color_default;
+      width: 100%;
+    }
+    label {
+      position: absolute;
+      top: -10px;
+      left: 25px;
+      padding: 0 10px;
+      background-color: $background;
+      line-height: 20px;
+      z-index: 9;
+    }
+  }
+
+  &.--file {
+    input {
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 15px;
+      right: 15px;
+      width: calc(100% - 30px);
+    }
+    label {
+      padding: 2rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100px;
+      font-size: 24px;
+      border: 2px solid $color_gray;
+    }
+  }
 }
