--- a/client/src/Components/Header/Header.scss
+++ b/client/src/Components/Header/Header.scss
@@ -1,8 +1,31 @@
 @import '../../Styles/variables';
 
 .logo {
+  a {
+    text-decoration: none;
+  }
   span {
     font-size: 1.3rem;
     color: $color_gray;
+  }
+}
+
+.account {
+  a {
+    position: relative;
+    font-size: 2rem;
+
+    &:not(:first-child) {
+      &:before {
+        content: '';
+        width: 2px;
+        height: 60%;
+        background-color: $color_gray;
+        position: absolute;
+        left: -5px;
+        top: 50%;
+        transform: translateY(-50%);
+      }
+    }
   }
 }
