User memes list

--- a/client/src/Styles/defaults.scss
+++ b/client/src/Styles/defaults.scss
@@ -33,8 +33,10 @@ body {
   font-weight: 400;
   color: $color_default;
   background-color: $background;
+}
 
-
+img {
+  max-width: 100%;
 }
 
 a {
