--- a/client/src/Components/Uploader/Uploader.scss
+++ b/client/src/Components/Uploader/Uploader.scss
@@ -1,5 +1,13 @@
-.memePicture {
-  img {
-    max-width: 100%;
+.uploader {
+  margin-bottom: 5rem;
+  .form__group {
+    &.--file {
+      label {
+        min-height: 100%;
+        img {
+          max-width: 100%;
+        }
+      }
+    }
   }
 }
