--- a/client/src/Components/UserMemes/UserMemes.scss
+++ b/client/src/Components/UserMemes/UserMemes.scss
@@ -5,6 +5,10 @@
   &__image {
     background-color: $background_bright;
     height: 100%;
+    padding: 1.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
 
