--- a/client/src/Components/Uploader/Uploader.scss
+++ b/client/src/Components/Uploader/Uploader.scss
@@ -1,12 +1,22 @@
+@import '../../Styles/variables';
+
 .uploader {
   margin-bottom: 5rem;
+  background-color: $background_bright;
+
   .headline {
     margin-bottom: 2rem;
   }
   .form__group {
+    &.--text {
+      label {
+        background-color: $background_bright;
+      }
+    }
     &.--file {
       label {
         min-height: 100%;
+
         img {
           max-width: 100%;
         }
