--- a/client/src/Components/Filters/Filter.scss
+++ b/client/src/Components/Filters/Filter.scss
@@ -1,6 +1,8 @@
 @import '../../Styles/variables';
 
 .filters {
+  margin-bottom: 2rem;
+  
   &__elements {
     display: flex;
     flex-wrap: wrap;
