--- a/client/src/Components/Meme/Meme.scss
+++ b/client/src/Components/Meme/Meme.scss
@@ -1,6 +1,16 @@
 @import '../../Styles/variables';
 
 .meme {
+  &__author {
+    &-avatar {
+      padding: 0 1rem 0 1.5rem;
+
+      img {
+        width: auto;
+        height: 51px;
+      }
+    }
+  }
   &__title {
     font-size: 2.4rem;
 
